--- a/app/src/main/res/layout/activity_edit_place_offer.xml
+++ b/app/src/main/res/layout/activity_edit_place_offer.xml
@@ -14,7 +14,7 @@
             android:id="@+id/edit_placeoffer_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/primary"
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
