--- a/app/src/main/res/layout/activity_events_nav_drawer_header.xml
+++ b/app/src/main/res/layout/activity_events_nav_drawer_header.xml
@@ -7,11 +7,11 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/img_header_bg"
+        android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:src="@drawable/background"/>
+        />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -28,11 +28,11 @@
             android:src="@drawable/profile"/>
 
         <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:textColor="@color/primary_text" />
-
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:textColor="@color/primary_text" />
+       
     </LinearLayout>
 </RelativeLayout>
