--- a/app/src/main/res/layout/activity_add_new_event.xml
+++ b/app/src/main/res/layout/activity_add_new_event.xml
@@ -14,13 +14,6 @@
         android:elevation="4dp"
         app:title="@string/add_new_event_title"
         app:titleTextColor="@color/primary_text">
-
-        <ImageView
-            android:id="@+id/add_new_event_profile_image"
-            android:layout_width="40sp"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
-            android:src="@drawable/profile" />
     </android.support.v7.widget.Toolbar>
 
     <EditText
@@ -61,7 +54,7 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="@string/new_event_start_date"
-        android:inputType="textPersonName"
+        android:inputType="text|datetime"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_event_description" />
@@ -75,7 +68,7 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="@string/new_event_end_date"
-        android:inputType="textPersonName"
+        android:inputType="text|date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_event_start_date" />
