--- a/app/src/main/res/menu/activity_my_events_main_drawer.xml
+++ b/app/src/main/res/menu/activity_my_events_main_drawer.xml
@@ -13,13 +13,9 @@
     <item android:title="Other">
         <menu>
             <item
-                android:id="@+id/settings"
-                android:icon="@drawable/ic_settings_black_24dp"
-                android:title="@string/nav_settings" />
-            <item
                 android:id="@+id/profile"
-                android:icon="@drawable/ic_add_circle"
-                android:title="@string/nav_settings" />
+                android:icon="@drawable/ic_event_note_black_24dp"
+                android:title="@string/nav_profile" />
             <item
                 android:id="@+id/logout"
                 android:icon="@drawable/ic_logout_24dp"
