--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -23,7 +23,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/user_picture_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/user_picture"
