--- a/app/src/main/res/layout/activity_invitation_list_view.xml
+++ b/app/src/main/res/layout/activity_invitation_list_view.xml
@@ -40,14 +40,16 @@
         <ImageButton
             android:id="@+id/invitation_status_acc"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:src="@drawable/ic_check_gray_24dp"
             android:background="@null"
         />
         <ImageButton
             android:id="@+id/invitation_status_rej"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:src="@drawable/ic_close_gray_24dp"
             android:background="@null"
             />
