--- a/app/src/main/res/layout/activity_add_new_event.xml
+++ b/app/src/main/res/layout/activity_add_new_event.xml
@@ -53,7 +53,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="@string/new_event_start_date"
+        android:hint="Start date [format dd.MM.yyyy HH:mm]"
         android:inputType="text|datetime"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="@string/new_event_end_date"
+        android:hint="End date [format dd.MM.yyyy HH:mm]"
         android:inputType="text|date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
