--- a/app/src/main/res/layout/activity_update_user_profile.xml
+++ b/app/src/main/res/layout/activity_update_user_profile.xml
@@ -36,10 +36,11 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:text="change pitcure"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.429"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/user_picture_iv" />
@@ -49,21 +50,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="28dp"
+        android:layout_marginTop="12dp"
         android:text="Username:"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/button"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button" />
 
     <TextView
         android:id="@+id/email_lbl"
         android:layout_width="86dp"
         android:layout_height="24dp"
         android:layout_marginStart="28dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="40dp"
         android:text="Email:"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username_lbl" />
 
@@ -75,6 +79,7 @@
         android:layout_marginTop="40dp"
         android:text="First name:"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_lbl" />
 
@@ -83,27 +88,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="32dp"
         android:text="Last name:"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/first_name_lbl" />
 
     <EditText
         android:id="@+id/username2"
-        android:layout_width="0dp"
+        android:layout_width="@android:dimen/thumbnail_height"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="28dp"
+
         android:text="SandraSIIT"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/username_lbl"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button" />
 
     <EditText
         android:id="@+id/email2"
-        android:layout_width="0dp"
+        android:layout_width="@android:dimen/thumbnail_width"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="20dp"
         android:text="sandra@gmail.com"
         android:textSize="18sp"
         app:layout_constraintLeft_toRightOf="@+id/email_lbl"
@@ -111,9 +121,10 @@
 
     <EditText
         android:id="@+id/first_name2"
-        android:layout_width="wrap_content"
+        android:layout_width="@android:dimen/thumbnail_width"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="20dp"
         android:text="Sandra"
         android:textSize="18sp"
         app:layout_constraintLeft_toRightOf="@+id/first_name_lbl"
@@ -121,14 +132,24 @@
 
     <EditText
         android:id="@+id/last_name2"
-        android:layout_width="wrap_content"
+        android:layout_width="@android:dimen/thumbnail_width"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="12dp"
         android:text="Mili"
         android:textSize="18sp"
         app:layout_constraintLeft_toRightOf="@+id/last_name_lbl"
         app:layout_constraintTop_toBottomOf="@id/first_name2" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="374dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="16dp"
+        android:text="save"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/last_name2" />
 
 
 </android.support.constraint.ConstraintLayout>
