invitation-cases for new inv, displaying image, category, creator

--- a/app/src/main/res/layout/fragment_general_invitation.xml
+++ b/app/src/main/res/layout/fragment_general_invitation.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/invitation_image"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="200dp"
         app:srcCompat="@drawable/background"
         android:paddingLeft="16dp"
@@ -33,6 +33,13 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_info_black_24dp"
             />
+
+        <TextView
+            android:id="@+id/invitation_info_category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_event_note_black_24dp"
+            />
         <TextView
             android:id="@+id/invitation_info_date"
             android:layout_width="wrap_content"
@@ -40,31 +47,32 @@
             android:drawableStart="@drawable/ic_event_black_24dp"
             />
         <TextView
+            android:id="@+id/invitation_info_creator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_face_black_24dp"
+            />
+        <TextView
             android:id="@+id/invitation_info_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_description_black_24dp"
             />
+
+
         <!--
-        <TextView
-            android:id="@+id/invitation_info_category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_description_black_24dp"
-            />
+              <TextView
+                  android:id="@+id/invitation_info_location"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:drawableStart="@drawable/ic_my_location_black_24dp"
+                  />
+              <com.google.android.gms.maps.MapView
+                  android:id="@+id/invitation_info_mapview"
+                  android:layout_width="wrap_content"
+                  android:layout_height="150dp"
+                  app:layout_constraintTop_toBottomOf="@+id/invitation_info_location" />
 
-        <TextView
-            android:id="@+id/invitation_info_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_my_location_black_24dp"
-            />
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/invitation_info_mapview"
-            android:layout_width="wrap_content"
-            android:layout_height="150dp"
-            app:layout_constraintTop_toBottomOf="@+id/invitation_info_location" />
-
--->
+      -->
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
