--- a/app/src/main/res/layout/activity_invitation_list_view.xml
+++ b/app/src/main/res/layout/activity_invitation_list_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
         <ImageView
-            android:id="@+id/event_image"
+            android:id="@+id/invitation_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginBottom="5dp"
