--- a/app/src/main/res/layout/fragment_people_overview.xml
+++ b/app/src/main/res/layout/fragment_people_overview.xml
@@ -18,13 +18,14 @@
         android:orientation="horizontal"
         >
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/new_invitation_email_edittext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textEmailAddress"
             android:hint="@string/invitation_email"
+
             />
         <ImageButton
             android:id="@+id/new_invitation_email_button"
