--- a/app/src/main/res/layout/activity_update_user_profile.xml
+++ b/app/src/main/res/layout/activity_update_user_profile.xml
@@ -1,152 +1,217 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="rs.ac.uns.ftn.pma.event_organizer.activity.UserProfileActivity">
-
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/user_profile_appbar"
+    android:fillViewport="true">
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        tools:context="rs.ac.uns.ftn.pma.event_organizer.activity.UserProfileActivity">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/user_profile_toolbar"
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/user_profile_appbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/primary"
-            android:elevation="4dp"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            android:layout_height="wrap_content">
 
-    </android.support.design.widget.AppBarLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/user_profile_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/primary"
+                android:elevation="4dp"
+                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <ImageView
-        android:id="@+id/user_picture_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/user_picture"
-        tools:layout_editor_absoluteX="159dp"
-        tools:layout_editor_absoluteY="56dp"
-        app:layout_constraintTop_toBottomOf="@id/user_profile_appbar"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        </android.support.design.widget.AppBarLayout>
 
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="159dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="24dp"
-        android:text="change pitcure"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_picture_iv" />
 
-    <TextView
-        android:id="@+id/username_lbl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="12dp"
-        android:text="Username:"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button" />
+        <ImageView
+            android:id="@+id/user_picture_iv"
 
-    <TextView
-        android:id="@+id/email_lbl"
-        android:layout_width="86dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="40dp"
-        android:text="Email:"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_lbl" />
-
-    <TextView
-        android:id="@+id/first_name_lbl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="40dp"
-        android:text="First name:"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_lbl" />
-
-    <TextView
-        android:id="@+id/last_name_lbl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="32dp"
-        android:text="Last name:"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/first_name_lbl" />
-
-    <EditText
-        android:id="@+id/username2"
-        android:layout_width="@android:dimen/thumbnail_height"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="28dp"
-
-        android:text="SandraSIIT"
-        android:textSize="18sp"
-        app:layout_constraintLeft_toRightOf="@+id/username_lbl"
-        app:layout_constraintTop_toBottomOf="@id/button" />
-
-    <EditText
-        android:id="@+id/email2"
-        android:layout_width="@android:dimen/thumbnail_width"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="16dp"
-        android:text="sandra@gmail.com"
-        android:textSize="18sp"
-        app:layout_constraintLeft_toRightOf="@+id/email_lbl"
-        app:layout_constraintTop_toBottomOf="@id/username2" />
-
-    <EditText
-        android:id="@+id/first_name2"
-        android:layout_width="@android:dimen/thumbnail_width"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="16dp"
-        android:text="Sandra"
-        android:textSize="18sp"
-        app:layout_constraintLeft_toRightOf="@+id/first_name_lbl"
-        app:layout_constraintTop_toBottomOf="@id/email2" />
-
-    <EditText
-        android:id="@+id/last_name2"
-        android:layout_width="@android:dimen/thumbnail_width"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="16dp"
-        android:text="Mili"
-        android:textSize="18sp"
-        app:layout_constraintLeft_toRightOf="@+id/last_name_lbl"
-        app:layout_constraintTop_toBottomOf="@id/first_name2" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="241dp"
-        android:layout_height="43dp"
-        android:text="save"
-        app:layout_constraintHorizontal_bias="0.547"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/last_name2" />
+            app:srcCompat="@drawable/user_picture"
+            tools:layout_editor_absoluteX="159dp"
+            tools:layout_editor_absoluteY="56dp"
+            android:layout_width="400px"
+            android:layout_height="400px"
+            app:layout_constraintTop_toBottomOf="@id/user_profile_appbar"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/change_image_btn"
+            android:layout_width="159dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="24dp"
+            android:text="change pitcure"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/user_picture_iv" />
+
+        <TextView
+            android:id="@+id/username_lbl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="28dp"
+            android:layout_marginTop="12dp"
+            android:text="Username:"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/change_image_btn" />
+
+        <TextView
+            android:id="@+id/email_lbl"
+            android:layout_width="86dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="40dp"
+            android:text="Email:"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/username_lbl" />
+
+        <TextView
+            android:id="@+id/password_lbl"
+            android:layout_width="86dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="40dp"
+            android:text="Password:"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/email_lbl" />
+
+        <TextView
+            android:id="@+id/repeat_password_lbl"
+            android:layout_width="86dp"
+            android:layout_height="51dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="24dp"
+            android:text="Repeat password:"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/password_lbl" />
+
+        <TextView
+            android:id="@+id/first_name_lbl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="20dp"
+            android:text="First name:"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/repeat_password_lbl" />
+
+        <TextView
+            android:id="@+id/last_name_lbl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="32dp"
+            android:text="Last name:"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/first_name_lbl" />
+
+        <EditText
+            android:id="@+id/username2"
+            android:layout_width="@android:dimen/thumbnail_height"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="28dp"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:text="SandraSIIT"
+            android:textSize="18sp"
+            app:layout_constraintLeft_toRightOf="@+id/username_lbl"
+            app:layout_constraintTop_toBottomOf="@id/change_image_btn" />
+
+        <EditText
+            android:id="@+id/email2"
+            android:layout_width="@android:dimen/thumbnail_width"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="28dp"
+            android:layout_marginTop="16dp"
+            android:text="sandra@gmail.com"
+            android:textSize="18sp"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            app:layout_constraintLeft_toRightOf="@+id/email_lbl"
+            app:layout_constraintTop_toBottomOf="@id/username2" />
+
+        <EditText
+            android:id="@+id/password2"
+            android:layout_width="@android:dimen/thumbnail_width"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="28dp"
+            android:layout_marginTop="16dp"
+            android:inputType="textPassword"
+            android:text=""
+            android:textSize="18sp"
+            app:layout_constraintLeft_toRightOf="@+id/password_lbl"
+            app:layout_constraintTop_toBottomOf="@id/email2" />
+        <EditText
+            android:id="@+id/repeat_password2"
+            android:layout_width="@android:dimen/thumbnail_width"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="28dp"
+            android:layout_marginTop="16dp"
+            android:text=""
+            android:inputType="textPassword"
+            android:textSize="18sp"
+            app:layout_constraintLeft_toRightOf="@+id/repeat_password_lbl"
+            app:layout_constraintTop_toBottomOf="@id/password2" />
+
+
+        <EditText
+            android:id="@+id/first_name2"
+            android:layout_width="@android:dimen/thumbnail_width"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="12dp"
+            android:text="Sandra"
+            android:textSize="18sp"
+            app:layout_constraintLeft_toRightOf="@+id/first_name_lbl"
+            app:layout_constraintTop_toBottomOf="@id/repeat_password2" />
+
+        <EditText
+            android:id="@+id/last_name2"
+            android:layout_width="@android:dimen/thumbnail_width"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:text="Mili"
+            android:textSize="18sp"
+            app:layout_constraintLeft_toRightOf="@+id/last_name_lbl"
+            app:layout_constraintTop_toBottomOf="@id/first_name2" />
+
+        <Button
+            android:id="@+id/save_btn"
+            android:layout_width="241dp"
+            android:layout_height="43dp"
+            android:text="save"
+            app:layout_constraintHorizontal_bias="0.547"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/last_name2" />
+
+
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
