--- a/app/src/main/res/layout/fragment_general_invitation.xml
+++ b/app/src/main/res/layout/fragment_general_invitation.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.GeneralInvitationFragment">
+    tools:context=".fragment.GeneralInvitationFragment"
+    android:isScrollContainer="true" >
 
     <ImageView
         android:id="@+id/invitation_image"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         app:srcCompat="@drawable/background"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="16dp"
-        android:paddingBottom="16dp"
+
     />
     <LinearLayout
         android:id="@+id/invitation_info_linearLayout"
@@ -59,20 +60,18 @@
             android:drawableStart="@drawable/ic_description_black_24dp"
             />
 
+        <TextView
+            android:id="@+id/invitation_info_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_my_location_black_24dp"
+         />
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/invitation_info_mapview"
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            app:layout_constraintTop_toBottomOf="@+id/invitation_info_location" />
 
-        <!--
-              <TextView
-                  android:id="@+id/invitation_info_location"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:drawableStart="@drawable/ic_my_location_black_24dp"
-                  />
-              <com.google.android.gms.maps.MapView
-                  android:id="@+id/invitation_info_mapview"
-                  android:layout_width="wrap_content"
-                  android:layout_height="150dp"
-                  app:layout_constraintTop_toBottomOf="@+id/invitation_info_location" />
 
-      -->
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
